--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -25,8 +25,7 @@
       <aside class="sidebar" id="sidebar">
         <div class="sidebar-header">
          <h2 class="logo-container">
-  <i class="ri-line-chart-line logo-icon" style="color:#FF6F00; font-size:1em;"></i>
-
+ 
           <span class="logo-text">Scanalyze</span>
  </h2>
           <button class="collapse-btn" id="sidebarToggle">
@@ -187,8 +186,7 @@
       <div id="imprimir-proyecto-info" class="proyecto-info"></div>
                <!-- ...ya tienes el filtro y la tabla debajo... -->
 
-<img src="../../img/inxite.png" alt="Logo Inxite" style="display:block; margin:0 auto 18px auto; max-width:160px;">
-            <div class="table-container" id="imprimir-table-container">
+          <div class="table-container" id="imprimir-table-container">
               <table id="imprimir-facturas-table">
                 <thead>
                   <tr>
@@ -312,6 +310,21 @@
 <div id="print-area" style="display:none"></div>
 <!-- ...existing code... -->
 
+
+
+<!-- Modal para preguntas -->
+<div id="modalPreguntas" class="modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.3); justify-content:center; align-items:center; z-index:1000;">
+  <div style="background:#fff; padding:32px 24px; border-radius:16px; min-width:320px;">
+    <h3>Responde las siguientes preguntas</h3>
+    <form id="formPreguntas">
+      <label>Vehiculo Utilizado:</label>
+      <input type="text" name="respuesta1" required />
+      <label>Personal que viaticó:</label>
+      <input type="text" name="respuesta2" required />
+      <button type="submit" style="margin-top:18px;">Continuar</button>
+    </form>
+  </div>
+</div>
 
   </body>
 </html>
