Cambios al login

--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
   </body>
 </html>
