La parte del administrador

--- a/modules/proyectos/proyectos.html
+++ b/modules/proyectos/proyectos.html
@@ -297,13 +297,13 @@
           <label for="ubicacion">Ubicación de la obra</label>
           <input type="text" id="ubicacion" name="ubicacion">
         </div>
-        <div class="modal-form-group">
+       <div class="modal-form-group">
           <label for="fecha-inicio">Fecha inicio</label>
-          <input type="date" id="fecha-inicio" name="fecha-inicio">
+          <input type="date" id="fecha-inicio" name="fecha-inicio" required>
         </div>
         <div class="modal-form-group">
           <label for="fecha-fin">Fecha fin</label>
-          <input type="date" id="fecha-fin" name="fecha-fin">
+          <input type="date" id="fecha-fin" name="fecha-fin" required>
         </div>
       </div>
       <div class="modal-actions">
