Ya medio funciona el filtro del dashboard

--- a/modules/proyectos/proyectos.html
+++ b/modules/proyectos/proyectos.html
@@ -320,6 +320,8 @@
   <div class="modal-content">
     <button id="close-modal-editar" class="close-modal" title="Cerrar">&times;</button>
     <h2>Editar proyecto</h2>
+      <div class="modal-title-line" style="height:4px; background:#FF6F00; border-radius:2px; margin-bottom:24px;"></div>
+ 
     <form id="form-editar-proyecto">
       <div class="modal-form-grid">
         <div class="modal-form-group">
