--- a/Usuarios/Dashboard/dashboard.html
+++ b/Usuarios/Dashboard/dashboard.html
@@ -64,10 +64,10 @@
 
         <div class="sidebar-footer">
           <div class="user-profile">
-            <div class="avatar">Ad</div>
+            <div class="avatar">Us</div>
             <div class="user-info">
-              <span class="name">Admin</span>
-              <span class="role">Administrador</span>
+              <span class="name">Usuario</span>
+              <span class="role">Usuario</span>
             </div>
           </div>
           <button class="logout-btn">
@@ -202,7 +202,7 @@
       </main>
     </div>
     <script src="../../Js/menu.js"></script>
-    <script type="module" src="dashboard.js"></script>
+    <script type="module" src="../../usuarios/Dashboard/dashboard.js"></script>
 <!-- ...existing code... -->
    <!-- ...existing code... -->
 
