ya funcionan las tres ventanas del usuario

--- a/Usuarios/registros/registros.html
+++ b/Usuarios/registros/registros.html
@@ -282,8 +282,8 @@
 </div>
 
 
-     <script type="module" src="../../usuarios/registros/registros.js"></script>
-    <script type="module" src="../../usuarios/registros/imprimir.js"></script>
+     <script type="module" src="registros.js"></script>
+    <script type="module" src="imprimir.js"></script>
      <script src="../../Js/menu.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
 
