--- a/Usuarios/Dashboard/dashboard.html
+++ b/Usuarios/Dashboard/dashboard.html
@@ -160,7 +160,7 @@
   <!-- Columna derecha: buscador, tabla resumen y gráficas (2/3) -->
   <section class="main-right">
     <div class="search-row" style="position:relative;">
-  <input type="text" class="dashboard-search" id="dashboard-search" placeholder="Buscar por Folio o Tienda..." autocomplete="off" />
+  <input type="text" class="dashboard-search" id="dashboard-search" placeholder="Buscar por proyecto..." autocomplete="off" />
   <!-- contenedor para sugerencias -->
   <div id="project-suggestions" style="position:absolute; top:46px; left:0; right:0; z-index:50; display:none; background:#fff; border:1px solid #e6e6e6; border-radius:6px; box-shadow:0 6px 18px rgba(0,0,0,0.06); max-height:260px; overflow:auto;"></div>
 </div>
@@ -206,11 +206,7 @@
 <!-- ...existing code... -->
    <!-- ...existing code... -->
 
-  <script type="module" src="../../modules/Dashboard/graficas/grafica-pastel.js"></script>
-<!-- ...existing code... -->
-  <script type="module" src="../../modules/Dashboard/graficas/grafica-barra.js"></script>
-  <script type="module" src="../../modules/Dashboard/graficas/tabla.js"></script>
-
+ 
   <!-- Modal de edición -->
 <div id="modal-editar" class="modal" style="display: none;">
   <div class="modal-content executive-view">
