--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -180,7 +180,7 @@
   <!-- Columna derecha: buscador, tabla resumen y gráficas (2/3) -->
   <section class="main-right">
     <div class="search-row" style="position:relative;">
-  <input type="text" class="dashboard-search" id="dashboard-search" placeholder="Buscar por Folio o Tienda..." autocomplete="off" />
+  <input type="text" class="dashboard-search" id="dashboard-search" placeholder="Buscar por Proyecto..." autocomplete="off" />
   <!-- contenedor para sugerencias -->
   <div id="project-suggestions" style="position:absolute; top:46px; left:0; right:0; z-index:50; display:none; background:#fff; border:1px solid #e6e6e6; border-radius:6px; box-shadow:0 6px 18px rgba(0,0,0,0.06); max-height:260px; overflow:auto;"></div>
 </div>
