Correccion de rutas

--- a/Usuarios/gastos/gastos.html
+++ b/Usuarios/gastos/gastos.html
@@ -344,7 +344,7 @@
 
     <script src="../../Js/menu.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
-    <script type="module" src="../../usuarios/gastos/gastos.js"></script>
+     <script type="module" src="./gastos.js"></script>
   </body>
 </html>
 
