--- a/Usuarios/Dashboard/dashboard.html
+++ b/Usuarios/Dashboard/dashboard.html
@@ -202,7 +202,7 @@
       </main>
     </div>
     <script src="../../Js/menu.js"></script>
-    <script type="module" src="../../usuarios/Dashboard/dashboard.js"></script>
+    <script type="module" src="./dashboard.js"></script>
 <!-- ...existing code... -->
    <!-- ...existing code... -->
 
