--- a/Usuarios/gastos/gastos.html
+++ b/Usuarios/gastos/gastos.html
@@ -47,6 +47,12 @@
                   <span>Gastos</span>
                 </a>
             </li>
+            <li >
+                <a href="../proyectos/proyectos.html">
+                  <i class="ri-folder-2-line"></i>
+                  <span>Proyectos</span>
+                </a>
+            </li>
           </ul>
         </nav>
 
